--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -991,7 +991,7 @@ section {
     margin: 0 0 40px 0;
 }
 
-#footer .social-links a {
+#footer a {
     font-size: 18px;
     display: inline-block;
     background: var(--link);
@@ -1006,14 +1006,15 @@ section {
     transition: 0.3s;
 }
 
-#footer .social-links a:hover {
+#footer a:hover {
     background: var(--accent);
     color: #fff;
     text-decoration: none;
 }
 
 #footer .copyright {
-    margin: 0 0 5px 0;
+    margin-top: 2.5em;
+    margin-bottom: 1em;
 }
 
 #footer .credits {
