--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,8 +434,9 @@ section {
 .about .content ul i {
     font-size: 16px;
     margin-right: 5px;
-    color: var(--accent);
+    color: var(--link);
     line-height: 0;
+    font-weight: bolder;
 }
 
 .about .content p:last-child {
@@ -1005,7 +1006,7 @@ section {
     margin: 0 0 40px 0;
 }
 
-#footer a {
+#footer h3 a {
     font-size: 18px;
     display: inline-block;
     background: var(--link);
@@ -1020,7 +1021,7 @@ section {
     transition: 0.3s;
 }
 
-#footer a:hover {
+#footer h3 a:hover {
     background: var(--accent);
     color: #fff;
     text-decoration: none;
@@ -1029,6 +1030,15 @@ section {
 #footer .copyright {
     margin-top: 2.5em;
     margin-bottom: 1em;
+}
+
+#footer .copyright a {
+  color: var(--foreground);
+  font-weight: normal;
+}
+
+#footer a:hover {
+  text-decoration: underline;
 }
 
 #footer .credits {
