--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,6 +592,7 @@ section {
 
 .services h5 {
   padding-top: 1em;
+  color: var(--accent);
 }
 
 .services .icon-box {
@@ -777,7 +778,7 @@ section {
     font-size: 20px;
     font-weight: bold;
     margin: 10px 0 5px 0;
-    color: #111;
+    color: var(--link);
 }
 
 .testimonials .testimonial-item h4 {
@@ -974,6 +975,22 @@ section {
         transform: rotate(360deg);
     }
 }
+
+.contact #signature {
+  text-align: center;
+  font-family: "Brush Script MT", cursive;
+  font-size: 40px;
+}
+
+.contact .emailme a {
+  background: var(--link);
+  border: 0;
+  padding: 10px 35px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+}
+
 
 /*--------------------------------------------------------------
 # Footer
