--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -817,6 +817,7 @@ section {
 .testimonials .testimonial-item p {
   font-style: italic;
   margin: 0 auto 15px auto;
+  padding: 0 10px;
 }
 
 .testimonials .swiper-pagination {
