--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,8 +292,8 @@ h6 {
     box-shadow: 0 4px 4px rgba(96, 96, 96, 0.1);
   }
 
-  #mobile-contact-bar a  {
-    font-size: 28px;
+  #mobile-contact-bar .mobile-links a  {
+    font-size: 24px;
     display: inline-block;
     background: var(--link);
     color: #fff;
@@ -302,8 +302,8 @@ h6 {
     margin-right: 4px;
     border-radius: 50%;
     text-align: center;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     transition: 0.3s;
   }
 }
