--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/beside-hero2.jpg") top right no-repeat;
+  background: url("../img/hero.webp") top right no-repeat;
   background-size: cover;
   position: relative;
 }
