--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ h6 {
   display: none;
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (orientation: portrait) {
+@media only screen and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
 
   #mobile-contact-bar {
     display: block;
