--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,11 +524,14 @@ section {
   padding: 0;
 }
 
+#experience-box ul li {
+  padding-bottom: 1em;
+}
+
 #experience-box ul i {
-  font-size: 20px;
+  font-size: 13px;
   margin-right: 5px;
   color: var(--link);
-  line-height: 1.5em;
 }
 
 #experience-box .content :last-child {
@@ -1099,7 +1102,7 @@ section .contact {
 }
 
 #footer h3 {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 700;
   position: relative;
   font-family: "Montserrat", sans-serif;
